[project]
name = "financial-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "polars>=1.42.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
